--- a/style.css
+++ b/style.css
@@ -133,3 +133,21 @@
     flex-direction: column!important;
     background-color: #776aa8a6;
 }
+
+.btn-primary {
+    --bs-btn-color: #fff;
+    --bs-btn-bg: #575755!important;
+    --bs-btn-border-color: #575755!important;
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: #fb6f00!important;
+    --bs-btn-hover-border-color: #fb6f00!important;
+    --bs-btn-focus-shadow-rgb: 49,132,253;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: #fb6f00!important;
+    --bs-btn-active-border-color: #fb6f00!important;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: #0d6efd;
+    --bs-btn-disabled-border-color: #0d6efd;
+    border-radius: 40px!important;
+}
