--- a/style.css
+++ b/style.css
@@ -151,3 +151,20 @@
     --bs-btn-disabled-border-color: #0d6efd;
     border-radius: 40px!important;
 }
+
+.btn-success {
+    --bs-btn-color: #fff;
+    --bs-btn-bg: #4e362e!important;
+    --bs-btn-border-color: #4e362e!important;
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: #9d2731!important;
+    --bs-btn-hover-border-color: #9d2731!important;
+    --bs-btn-focus-shadow-rgb: 60,153,110;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: #9d2731!important;
+    --bs-btn-active-border-color: #9d2731!important;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: #838383!important;
+    --bs-btn-disabled-border-color: #838383!important;
+}
