--- a/style.css
+++ b/style.css
@@ -168,3 +168,35 @@
     --bs-btn-disabled-bg: #838383!important;
     --bs-btn-disabled-border-color: #838383!important;
 }
+
+.gradient-background {
+    background: linear-gradient(360deg, #CAC7CC, #CF8BF3, #FDB99B);
+    background-size: 100% 200%; /* 高度設為200%以包含整個漸變 */
+    animation: gradient-animation 10s linear infinite;
+  }
+  
+  @keyframes gradient-animation {
+    0% {
+      background-position: 0% 0%;
+    }
+    100% {
+      background-position: 0% 100%;
+    }
+}
+
+.btn-outline-info {
+    --bs-btn-color: #fff!important;
+    --bs-btn-border-color: #fff!important;
+    --bs-btn-hover-color: #fff!important;
+    --bs-btn-hover-bg: #fdb99b!important;
+    --bs-btn-hover-border-color: #fdb99b!important;
+    --bs-btn-focus-shadow-rgb: 13,202,240;
+    --bs-btn-active-color: #fff!important;
+    --bs-btn-active-bg: #fdb99b!important;
+    --bs-btn-active-border-color: #fdb99b!important;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #cac7cc!important;
+    --bs-btn-disabled-bg: transparent;
+    --bs-btn-disabled-border-color: #cac7cc!important;
+    --bs-gradient: none;
+}
