--- a/style.css
+++ b/style.css
@@ -200,3 +200,21 @@
     --bs-btn-disabled-border-color: #cac7cc!important;
     --bs-gradient: none;
 }
+
+.btn-info {
+    --bs-btn-color: #fff!important;
+    --bs-btn-bg: #b992da!important;
+    --bs-btn-border-color: #b992da!important;
+    --bs-btn-hover-color: #b992da!important;
+    --bs-btn-hover-bg: #ffffff!important;
+    --bs-btn-hover-border-color: #ffffff!important;
+    --bs-btn-focus-shadow-rgb: 11,172,204;
+    --bs-btn-active-color: #b992da!important;
+    --bs-btn-active-bg: #ffffff!important;
+    --bs-btn-active-border-color: #ffffff!important;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #000!important;
+    --bs-btn-disabled-bg: #cecece!important;
+    --bs-btn-disabled-border-color: #cecece!important;
+    border-radius: 20px!important;
+}
