提交对 yo.html 的本地更改

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 .nav-pills {
     --bs-nav-pills-border-radius: 20px!important;
     --bs-nav-pills-link-active-color: #9c77a6!important;
-    --bs-nav-pills-link-active-bg: #363037!important;
+    --bs-nav-pills-link-active-bg: #ffffff33!important;
 }
 
 
